--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+/<!DOCTYPE html>
 <html lan="en">
     <head>
         <link rel="stylesheet" href="styles.css">
@@ -10,23 +10,14 @@
         <div class="container">
             <h1 id="main-heading">Gold Movies</h1>
             <ul>
-                <li class="list-items">I am gold</li>
+                <li class="list-items"><span>Sure, </span>I am gold</li>
                 <li class="list-items">Gold is better</li>
                 <li class="list-items">Gold is not cheap</li>
                 <li class="list-items">Golden Era</li>
                 <li class="list-items">Stolen Gold</li>
             </ul>
         </div>
-        <div class="container">
-            <h1 id="main-heading">Bold Movies</h1>
-            <ul>
-                <li class="list-items">I am gold</li>
-                <li class="list-items">Gold is better</li>
-                <li class="list-items">Gold is not cheap</li>
-                <li class="list-items">Golden Era</li>
-                <li class="list-items">Stolen Gold</li>
-            </ul>
-        </div>
+    
     <script src="app.js"></script>
     </body>
 </html>
